5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3555/executions/1861_3215.log
== TEST (2019-06-26 19:01:34) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))

print(m)
print(max[m])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:02:01) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))

print(m)
print(max[m])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:02:33) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))

print(m)
print(max[m])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:02:49) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))

print(m)
print(max[m])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:03:46) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))

print(m)
i = max(m)
print(i)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:04:44) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))

print(m)
i = max[m]
print(i)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:04:46) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))

print(m)
i = max[m]
print(i)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:04:46) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))

print(m)
i = max[m]
print(i)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 19:04:48) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))

print(m)
i = max[m]
print(i)


-- EXECUTION TIME:
0.948726
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1861/3215/main.py", line 7, in <module>
    i = max[m]
TypeError: 'builtin_function_or_method' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:06:15) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))

print(m)
i = max[m[]]
print(i)


-- ERROR:
File "XXXX", line 7
    i = max[m[]]
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:06:46) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))

print(m)
i = max(m)
print(i)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:07:42) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))

print(m)
i = max(m.all())
print(i)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:09:34) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))

print(m)
i = max(m,index)
print(i)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:09:47) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))

print(m)
i = max(m,index)
print(i)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:10:14) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))

print(m)
i = max(m:)
print(i)


-- ERROR:
File "XXXX", line 7
    i = max(m:)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:10:37) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))

print(m)
i = max(m,:)
print(i)


-- ERROR:
File "XXXX", line 7
    i = max(m,:)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:11:01) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))

print(m)
i = max(m,4)
print(i)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:14:53) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))

print(m)
i = max(m[1,1])
print(i)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:17:09) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))

print(m)
i = max(m[1,1])
print(i)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 19:17:13) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))

print(m)
i = max(m[1,1])
print(i)


-- EXECUTION TIME:
0.922801
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1861/3215/main.py", line 7, in <module>
    i = max(m[1,1])
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 19:17:28) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))

print(m)
i = max(m[1,1])
print(i)


-- EXECUTION TIME:
0.878828
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1861/3215/main.py", line 7, in <module>
    i = max(m[1,1])
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:17:35) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))

print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:21:08) 
-- CODE:
from numpy import *
from numpy.linalg import *

#mat= array(eval(input()))
m = zeros(3,3)
print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:21:30) 
-- CODE:
from numpy import *
from numpy.linalg import *

#mat= array(eval(input()))
m = zeros[3,3]
print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:23:34) 
-- CODE:
from numpy import *
from numpy.linalg import *

#mat= array(eval(input()))
n= mat.shape()
m = zero(n,dtype = int)
print(n)
print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:23:47) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat= array(eval(input()))
n= mat.shape()
m = zero(n,dtype = int)
print(n)
print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:24:12) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat= array(eval(input()))
n= mat.shape()[0]
m = zero(n,dtype = int)
print(n)
print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
